--- a/views/layout.html
+++ b/views/layout.html
@@ -13,6 +13,7 @@
 
   <body>
     <div class="container">
+      <h1><a href="/">Home</a></h1>
       <h3>To generate a token for a name, use /sphere/add/{name} in url</h3>
       <h4>E.g. <a href="/sphere/add/parul">/sphere/add/parul</a>
         <br/><br/>
